Generate pages, links on home page, from Contentful

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='Other place'>
-  <div>Welcome to the other place</div>
+  <div>Contact Theresa Baumgartner</div>
 </Layout>
