--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,22 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { getPosts } from '../queries/Post';
+import type { Post } from '../types/shared';
+
+const posts: Post[] = await getPosts();
 ---
 
 <Layout title='Home'>
   <div>
-    <h1 class='m-4 text-2xl'>This is the home page</h1>
+    {
+      posts.map(({ title, slug, subtitle }) => (
+        <a href={`/projects/${slug}`}>
+          <h2>
+            {title}
+            <span>{subtitle}</span>
+          </h2>
+        </a>
+      ))
+    }
   </div>
 </Layout>
