--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes flash {
+  50% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+}
+
+@keyframes displace {
+  0% {
+    transform: translate(0, 0);
+  }
+  60% {
+    transform: translate(0px, 4px);
+  }
+  100% {
+    transform: translate(1px, 4px);
+  }
+}
+
+.flashing-link:hover {
+  opacity: 1;
+  animation: flash 100ms linear infinite, displace 4s linear infinite alternate;
+  color: #fff;
+  text-shadow: #000 0px 2px 4px;
+}
