--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   }
 }
 
-@keyframes displace {
+/* @keyframes displace {
   0% {
     transform: translate(0, 0);
   }
@@ -21,11 +21,12 @@
   100% {
     transform: translate(4px, 1px);
   }
-}
+} */
 
 .flashing-link:hover {
   opacity: 1;
-  animation: flash 100ms linear infinite, displace 4s linear infinite alternate;
+  /* animation: flash 100ms linear infinite, displace 4s linear infinite alternate; */
+  animation: flash 100ms linear infinite;
   color: #fff;
   text-shadow: #000 0px 2px 20px;
 }
