--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* FONTS */
+
+@font-face {
+  font-family: 'Karrik';
+  src: url('/Karrik-Regular.woff2') format('woff2');
+}
+
 @keyframes flash {
   50% {
     opacity: 1;
