--- a/app/globals.css
+++ b/app/globals.css
@@ -2,29 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* FONTS */
-
-@font-face {
-  font-family: 'NeueTelevision';
-  src: url('/NeueTelevisionSTrials-Regular.woff2') format('woff2');
-}
-
-@keyframes flash {
-  50% {
-    opacity: 1;
-  }
-  80% {
-    opacity: 0;
-  }
-}
-
-.flashing-link:hover {
-  opacity: 1;
-  animation: flash 100ms linear infinite;
-  color: #fff;
-  text-shadow: #000 0px 2px 20px;
-}
-
 /* IFRAME */
 
 .youtube-iframe-container {
@@ -35,4 +12,28 @@
 
 .youtube-iframe-container iframe {
   @apply absolute left-0 top-0 h-full w-full;
+}
+
+/* RICH TEXT */
+
+section h1,
+section h2,
+section h3,
+section h4,
+section h5,
+section h6,
+section p {
+  @apply mx-2 md:mx-4 lg:mx-8;
+}
+
+section p {
+  @apply mb-4 max-w-5xl;
+}
+
+section ul p {
+  @apply mb-0;
+}
+
+section img {
+  @apply my-12 w-full;
 }
