--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* FONTS */
+
+@font-face {
+  font-family: 'Integral';
+  src: url('/IntegralCF-Regular.woff2') format('woff2');
+}
+
 /* IFRAME */
 
 .youtube-iframe-container {
