--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'Integral';
-  src: url('/IntegralCF-Regular.woff2') format('woff2');
+  src: url('/IntegralCF-Bold.woff2') format('woff2');
 }
 
 /* IFRAME */
