--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
 .iframe-container {
   position: relative;
   padding-bottom: 56.25%;
+  @apply bg-black;
 }
 
 .iframe-container iframe {
@@ -34,6 +35,10 @@ section p {
 
 section p {
   @apply my-4 max-w-5xl;
+}
+
+section a {
+  @apply underline;
 }
 
 section ul {
